# Process this file with autoconf to produce a configure script
AC_INIT(configure.in)

# Checks for system type
AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE(webdot, 1.6)

# Set of all available languages
# ALL_LINGUAS=""

BUILD_DIR=`pwd`
cd ${srcdir}
TOP_DIR=`pwd`
cd ${BUILD_DIR}

AC_SUBST(TOP_DIR)
AC_SUBST(BUILD_DIR)

# Checks for Tcl
AC_PATH_PROG(TCLSH,tclsh8.3)
TCLSH_EXEC_PREFIX=${TCLSH%%/bin/tclsh8.3}
AC_ARG_WITH(tcl, [  --with-tcl=DIR          use Tcl binaries from DIR], TCLSH_EXEC_PREFIX=$withval,)

if test -f $TCLSH_EXEC_PREFIX/lib/tclConfig.sh; then
    AC_MSG_RESULT([using $TCLSH_EXEC_PREFIX/lib/tclConfig.sh])
else
    AC_MSG_ERROR([Unable to find tclConfig.sh.])
fi

# Generate Makefiles etc.
AC_OUTPUT(Makefile webdot.spec)
